--- a/recipes/pancakes.html
+++ b/recipes/pancakes.html
@@ -6,7 +6,30 @@
     <body>
         <h1>Good Old Fashioned Pancakes</h1>
         <img src="pancakes.jpeg">
-        <h2><p>This is a great recipe that I found in my Grandma's recipe book. Judging from the weathered look of this recipe card, it was a family favorite.</p>
-            <p>This is a quick and easy recipe that needs just a few ingredients, making this the perfect simple and delicious Sunday breakfast.</p></h2>
+        <h2>
+            <p>This is a great recipe that I found in my Grandma's recipe book. Judging from the weathered look of this recipe card, it was a family favorite.</p>
+            <p>This is a quick and easy recipe that needs just a few ingredients, making this the perfect simple and delicious Sunday breakfast.</p>
+        </h2>
+
+        <h3>Ingredients</h3>
+        <h4>
+            <ul>
+                <li>1 1/2 cups all-purpose flour</li>
+                <li>3 1/2 teaspoons baking powder</li>
+                <li>1/4 teaspoon salt, or more to taste</li>
+                <li>1 tablespoon white sugar</li>
+                <li>1 1/4 cups milk</li>
+                <li>1 egg</li>
+                <li>3 tablespoons butter, melted</li>
+            </ul>
+        
+        <h3>Steps</h3>
+        <h4>
+            <ol>
+                <li>In a large bowl, sift together the flour, baking powder, salt, and sugar. Make a well in the center and pour in the milk, egg, and melted butter; mix until smooth.</li>
+                <li>Heat a lightly oiled griddle or frying pan over medium-high heat. Pour or scoop the batter on to the griddle, using approximately 1/4 cup for each pancake. Brown on both sides and serve hot.</li>
+            </ol>
+        </h4>
+    </h4>
     </body>
 </html>
