--- a/recipes/ham-cheese-breakfast-tortilla.html
+++ b/recipes/ham-cheese-breakfast-tortilla.html
@@ -7,5 +7,25 @@
         <h2>
             <p>This recipe is great for a special brunch or even a quick and easy dinner.</p>  <p>Other breakfast meats can be used, but deli ham is the easiest since it is already fully cooked.</p>
         </h2>
+        <h3>Ingredients</h3>
+        <h4>
+            <ul>
+                <li>12 eggs</li>
+                <li>1/3 cup milk</li>
+                <li>3 slices cooked ham, diced</li>
+                <li>2 green onions, minced</li>
+                <li>salt and pepper to taste</li>
+                <li>4 ounces cheddar cheese, shredded</li>
+                <li>4 10-inch flour tortillas</li>
+                <li>1/2 cup salsa</li>
+            </ul>
+        </h4>
+        <h3>Steps</h3>
+        <h4>
+            <ol>
+                <li>Beat together eggs and mmilk. Heat a lightly oiled skillet or non-stick pan over medium-high heat and cook egg mixture, stirring occasionally, until firm. When almost done, stir in ham, green onions, salt and pepper.</li>
+                <li>Spoon 1/4 of the egg mixture on top of each tortilla. Sprinkle the eggs with cheese, fold over the tortilla to make a roll and top with salsa if desired.</li>
+            </ol>
+        </h4>
     </body>
 </html>
