--- a/recipes/ham-cheese-breakfast-tortilla.html
+++ b/recipes/ham-cheese-breakfast-tortilla.html
@@ -23,7 +23,7 @@
         <h3>Steps</h3>
         <h4>
             <ol>
-                <li>Beat together eggs and mmilk. Heat a lightly oiled skillet or non-stick pan over medium-high heat and cook egg mixture, stirring occasionally, until firm. When almost done, stir in ham, green onions, salt and pepper.</li>
+                <li>Beat together eggs and milk. Heat a lightly oiled skillet or non-stick pan over medium-high heat and cook egg mixture, stirring occasionally, until firm. When almost done, stir in ham, green onions, salt and pepper.</li>
                 <li>Spoon 1/4 of the egg mixture on top of each tortilla. Sprinkle the eggs with cheese, fold over the tortilla to make a roll and top with salsa if desired.</li>
             </ol>
         </h4>
