Fixed links in index.html from absolute links to relative links

--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     </head>
     <body>
         <h1>Odin Recipes</h1>
-        <p><a href="https://www.allrecipes.com/recipe/21014/good-old-fashioned-pancakes/">Good Old Fashioned Pancakes</a></p>
-        <p><a href="https://www.allrecipes.com/recipe/21202/ham-and-cheese-breakfast-tortillas/">Ham and Cheese Breakfast Tortillas</a></p>
-        <p><a href="https://www.allrecipes.com/recipe/69084/bacon-cheddar-deviled-eggs/">Bacon Cheddar Deviled Eggs</a></p>
+        <p><a href="file:///home/sasha/repos/odin-recipes/recipes/pancakes.html">Good Old Fashioned Pancakes</a></p>
+        <p><a href="file:///home/sasha/repos/odin-recipes/recipes/ham-cheese-breakfast-tortilla.html">Ham and Cheese Breakfast Tortillas</a></p>
+        <p><a href="file:///home/sasha/repos/odin-recipes/recipes/baconcheddareggs.html">Bacon Cheddar Deviled Eggs</a></p>
     </body>
 </html>
