--- a/index.html
+++ b/index.html
@@ -1,12 +1,9 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title></title>
-    </head>
     <body>
         <h1>Odin Recipes</h1>
-        <p><a href="file:///home/sasha/repos/odin-recipes/recipes/pancakes.html">Good Old Fashioned Pancakes</a></p>
-        <p><a href="file:///home/sasha/repos/odin-recipes/recipes/ham-cheese-breakfast-tortilla.html">Ham and Cheese Breakfast Tortillas</a></p>
-        <p><a href="file:///home/sasha/repos/odin-recipes/recipes/baconcheddareggs.html">Bacon Cheddar Deviled Eggs</a></p>
+        <p><a href="recipes/pancakes.html">Good Old Fashioned Pancakes</a></p>
+        <p><a href="recipes/ham-cheese-breakfast-tortilla.html">Ham and Cheese Breakfast Tortillas</a></p>
+        <p><a href="recipes/baconcheddareggs.html">Bacon Cheddar Deviled Eggs</a></p>
     </body>
 </html>
