--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html>
     <body>
         <h1>Odin Recipes</h1>
-        <p><a href="recipes/pancakes.html">Good Old Fashioned Pancakes!</a></p>
-        <p><a href="recipes/ham-cheese-breakfast-tortilla.html">Ham and Cheese Breakfast Tortillas!</a></p>
-        <p><a href="recipes/baconcheddareggs.html">Bacon Cheddar Deviled Eggs!</a></p>
+        <p><a href="recipes/pancakes.html">Good Old Fashioned Pancakes</a></p>
+        <p><a href="recipes/ham-cheese-breakfast-tortilla.html">Ham and Cheese Breakfast Tortillas</a></p>
+        <p><a href="recipes/baconcheddareggs.html">Bacon Cheddar Deviled Eggs</a></p>
     </body>
 </html>
